Replaced grafana helm chart setup with app-template Added scheduled backups for grafana Removed unnecessary backup stuff for CodeProject AI Server

--- a/production/volsync-system/replicationdestination.yaml
+++ b/production/volsync-system/replicationdestination.yaml
@@ -289,13 +289,13 @@ spec:
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationDestination
 metadata:
-  name: cpas-coral
-  namespace: ai
+  name: grafana-config
+  namespace: monitoring
 spec:
   trigger:
     manual: restore-once
   restic:
-    repository: cpas-coral-config
+    repository: grafana-config
     copyMethod: Snapshot
     storageClassName: ceph-block
     cacheStorageClassName: ceph-block
@@ -304,27 +304,6 @@ spec:
       - ReadWriteOnce
     accessModes:
       - ReadWriteOnce
-    cacheCapacity: 3Gi
-    capacity: 3Gi
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/volsync.backube/replicationdestination_v1alpha1.json
-apiVersion: volsync.backube/v1alpha1
-kind: ReplicationDestination
-metadata:
-  name: cpas-config
-  namespace: ai
-spec:
-  trigger:
-    manual: restore-once
-  restic:
-    repository: cpas-config
-    copyMethod: Snapshot
-    storageClassName: ceph-block
-    cacheStorageClassName: ceph-block
-    volumeSnapshotClassName: ceph-block
-    cacheAccessModes:
-      - ReadWriteOnce
-    accessModes:
-      - ReadWriteOnce
-    cacheCapacity: 3Gi
-    capacity: 3Gi
+    cacheCapacity: 128Mi
+    capacity: 128Mi
+
