--- a/production/monitoring/grafana/values.yaml
+++ b/production/monitoring/grafana/values.yaml
@@ -1,76 +1,57 @@
-persistence:
-  enabled: true
-  size: 128Mi
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.1/charts/other/app-template/values.schema.json
 
-adminUser: admin
-adminPassword: UnfinishedRainbowRecedeInnumerable
+defaultPodOptions:
+  securityContext:
+    fsGroup: 472
+
+controllers:
+  main:
+    strategy: Recreate
+
+    containers:
+      main:
+        image:
+          repository: grafana/grafana
+          tag: 9.5.20
+
+service:
+  main:
+    controller: main
+    ports:
+      http:
+        port: 3000
 
 ingress:
-  enabled: true
-  ingressClassName: traefik
-  annotations:
-    gethomepage.dev/enabled: "true"
-    gethomepage.dev/group: Monitoring
-    gethomepage.dev/icon: grafana.png
-    gethomepage.dev/name: Grafana
-  hosts:
-    - grafana.services.untouchedwagons.com
-  tls:
-    - secretName: com-untouchedwagons-services
-      hosts:
-        - grafana.services.untouchedwagons.com
+  main:
+    annotations:
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/group: Monitoring
+      gethomepage.dev/icon: grafana.png
+      gethomepage.dev/name: Grafana
+    hosts:
+      - host: grafana.services.untouchedwagons.com
+        paths:
+          - path: /
+            pathType: Prefix
+            service:
+              identifier: main
+              port: http
+    tls:
+      - hosts: 
+        - untouchedwagons.com
+        secretName: com-untouchedwagons-services
 
-datasources:
-  datasources.yaml:
-    apiVersion: 1
-    datasources:
-      - name: Prometheus
-        type: prometheus
-        url: http://prometheus-operated:9090
-        access: proxy
-        isDefault: true
-        uid: prometheus
-
-dashboards:
-  default:
-    k8s-nodes:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/K8S%20_%20Nodes.json
-    k8s-pods:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/K8s%20_%20Pod%20RAM%20Usage.json
-    k8s-resources:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/K8s%20_%20Resources.json
-    k8s-storage:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/K8s%20_%20Storage.json
-    flaresolverr:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/FlareSolverr.json
-    media:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/Media%20Dashboard.json
-    qbittorrent:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/Qbittorrent.json
-    blackbox:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/Blackbox%20Exporter.json
-    ceph:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/Ceph.json
-    linux:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/Linux%20Hosts.json
-    opnsense:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/OPNSense.json
-    technitium:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/Technitium.json
-    volsync:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/volsync.json
-    zfs:
-      url: https://raw.githubusercontent.com/UntouchedWagons/K3S-Cluster-Setup/main/dashboards/ZFS.json
-
-dashboardProviders:
-  dashboardproviders.yaml:
-    apiVersion: 1
-    providers:
-    - name: 'default'
-      orgId: 1
-      folder: ''
-      type: file
-      disableDeletion: false
-      editable: true
-      options:
-        path: /var/lib/grafana/dashboards/default
+persistence:
+  config:
+    type: persistentVolumeClaim
+    accessMode: ReadWriteOnce
+    size: 128Mi
+    dataSourceRef:
+      kind: ReplicationDestination
+      apiGroup: volsync.backube
+      name: grafana-config
+    advancedMounts:
+      main: 
+        main:
+          - path: /var/lib/grafana
