--- a/production/monitoring/exporter-idrac/service.yaml
+++ b/production/monitoring/exporter-idrac/service.yaml
@@ -42,6 +42,9 @@ spec:
     metadata:
       labels:
         app: exporter-idrac
+      annotations:
+        enable.version-checker.io/main: "true"
+        match-regex.version-checker.io/main: ^\d+\.\d+\.\d+$
     spec:
       containers:
         - name: exporter-idrac
