--- a/production/default/file-browser/values.yaml
+++ b/production/default/file-browser/values.yaml
@@ -1,6 +1,13 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.1/charts/other/app-template/values.schema.json
 
+defaultPodOptions:
+  securityContext:
+    fsGroup: 0
+  annotations:
+    enable.version-checker.io/main: "true"
+    match-regex.version-checker.io/main: ^v\d+\.\d+\.\d+$
+
 controllers:
   main:
     strategy: Recreate
