--- a/production/default/vaultwarden/values.yaml
+++ b/production/default/vaultwarden/values.yaml
@@ -1,6 +1,11 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.1/charts/other/app-template/values.schema.json
 
+defaultPodOptions:
+  annotations:
+    enable.version-checker.io/main: "true"
+    match-regex.version-checker.io/main: ^\d+\.\d+\.\d+$
+
 controllers:
   main:
     strategy: Recreate
