--- a/production/home-assistant/home-assistant/values.yaml
+++ b/production/home-assistant/home-assistant/values.yaml
@@ -21,6 +21,9 @@ controllers:
 defaultPodOptions:
   securityContext:
     fsGroup: 568
+  annotations:
+    enable.version-checker.io/main: "true"
+    match-regex.version-checker.io/main: ^\d+\.\d+\.\d+$
 
 service:
   main:
