--- a/production/home-assistant/zwave-js-ui/values.yaml
+++ b/production/home-assistant/zwave-js-ui/values.yaml
@@ -27,6 +27,9 @@ defaultPodOptions:
     feature.node.kubernetes.io/usb-ff_10c4_ea60.present: "true"
   securityContext:
     fsGroup: 568
+  annotations:
+    enable.version-checker.io/main: "true"
+    match-regex.version-checker.io/main: ^\d+\.\d+\.\d+$
 
 service:
   main:
