--- a/production/monitoring/exporter-nut/service.yaml
+++ b/production/monitoring/exporter-nut/service.yaml
@@ -19,6 +19,9 @@ spec:
     metadata:
       labels:
         app: exporter-nut
+      annotations:
+        enable.version-checker.io/main: "true"
+        match-regex.version-checker.io/main: ^\d+\.\d+\.\d+$
     spec:
       containers:
         - name: nut-exporter
