--- a/production/networking/ispyagentdvr/values.yaml
+++ b/production/networking/ispyagentdvr/values.yaml
@@ -25,6 +25,10 @@ controllers:
 defaultPodOptions:
   nodeSelector:
     intel.feature.node.kubernetes.io/gpu: "true"
+  annotations:
+    enable.version-checker.io/main: "true"
+    match-regex.version-checker.io/main: ^v\d+\.\d+\.\d+\.\d+$
+
 
 service:
   main:
