--- a/production/servarr/radarr/values.yaml
+++ b/production/servarr/radarr/values.yaml
@@ -4,6 +4,9 @@
 defaultPodOptions:
   securityContext:
     fsGroup: 568
+  annotations:
+    enable.version-checker.io/main: "true"
+    use-sha.version-checker.io/main: "false"
 
 controllers:
   main:
