Added documentation on how to use a pci-e Coral Accelerator in Talos Linux for Code Project AI

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 talos/testing/secrets.yaml
 talos/testing/rendered
 talos/testing/rendered+nvidia
+talos/testing/rendered+coral
 production/*/*/.decrypted~values.yaml
