Fixed network policy that wasn't actually doing anything

--- a/production/default/file-browser/values.yaml
+++ b/production/default/file-browser/values.yaml
@@ -96,8 +96,7 @@ networkpolicies:
     policyTypes:
       - Egress
     rules:
-      egress:
-        - {}
+      egress: []
 
 configMaps:
   file-browser:
