--- a/production/default/homepage/values.yaml
+++ b/production/default/homepage/values.yaml
@@ -58,12 +58,12 @@ config:
     - Infrastructure:
         - Proxmox:
             icon: proxmox.png
-            href: https://proxmox.internal.untouchedwagons.com:8006
+            href: https://pve-cf7c14e9.internal.untouchedwagons.com:8006
             widget:
               type: proxmox
-              url: https://proxmox.internal.untouchedwagons.com:8006
+              url: https://pve-cf7c14e9.internal.untouchedwagons.com:8006
               username: root@pam!pve-exporter
-              password: 019d4ad7-a1cc-4b45-ae02-02363f60f03e
+              password: c7faa17f-12bc-48b9-b469-7b5319179095
         - Proxmox Backup Server:
             icon: proxmox.png
             href: https://vault.internal.untouchedwagons.com:8007
