More proxmox changes

--- a/production/monitoring/exporter-blackbox/service.yaml
+++ b/production/monitoring/exporter-blackbox/service.yaml
@@ -125,7 +125,7 @@ spec:
     module: [http_2xx]
   staticConfigs:
     - targets:
-      - https://proxmox.internal.untouchedwagons.com:8006
+      - https://pve-cf7c14e9.internal.untouchedwagons.com:8006
       - https://unifi.internal.untouchedwagons.com:8443
   relabelings:
     - action: replace
@@ -197,7 +197,7 @@ spec:
       - usw-pro-48-poe.internal.untouchedwagons.com:22
       - vault.internal.untouchedwagons.com:22
       - storage.internal.untouchedwagons.com:22
-      - proxmox.internal.untouchedwagons.com:22
+      - pve-cf7c14e9.internal.untouchedwagons.com:22
       - pikvm.internal.untouchedwagons.com:22
   relabelings:
     - action: replace
