--- a/production/monitoring/exporter-linux/service.yaml
+++ b/production/monitoring/exporter-linux/service.yaml
@@ -15,6 +15,6 @@ spec:
     - targets:
       - vault.internal.untouchedwagons.com:9100
       - technitium.internal.untouchedwagons.com:9100
-      - proxmox.internal.untouchedwagons.com:9100
+      - pve-cf7c14e9.internal.untouchedwagons.com:9100
       - storage.internal.untouchedwagons.com:9100
       - pikvm.internal.untouchedwagons.com:9100
