I don't remember why I changed this

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ talos/testing/secrets.yaml
 talos/testing/rendered
 talos/testing/rendered+nvidia
 talos/testing/rendered+coral
-production/*/*/.decrypted~values.yaml
+production/*/*/.decrypted*.yaml
