--- a/testing/cert-manager/values.yaml
+++ b/testing/cert-manager/values.yaml
@@ -2,3 +2,6 @@
 extraArgs:
   - --dns01-recursive-nameservers=1.1.1.1:53,9.9.9.9:53
   - --dns01-recursive-nameservers-only
+
+crds:
+  enabled: true
